# mwmbl

./: .dockerignore  .gcloudignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.crawler  Makefile  README.md  TODO.md  app.json  app.py  bootstrap.sh  crawl.py  create_app.py  deploy.sh  devbox.json  docker-compose.perso.yml  docker-compose.yml  domain_titles.py  extract.py  extract_local.py  fsqueue.py  index.py  index_glob.py  index_queue.py  indexcc.py  make_curl.py  manage.py  nginx.conf.sigil  paths.py  performance.py  pyproject.toml  requirements.txt  setup.cfg  site-specific-crawling.md  snapcraft.yaml  test_state_validation.py  test_voting_api.sh  top-pypi-packages.json  (+1 more)
.github/workflows/: build.yml  ci.yml  claude-review.yml  codeberg-mirror.yml  deploy-beta.yml  deploy.yml  docker-publish.yml  super-search-smoke.yml
analyse/: add_term_info.py  analyse_crawled_domains.py  analyse_crawled_links.py  decompress_errors.py  estimate_unique_urls.py  export_top_domains.py  export_urls.py  index_concurrency.py  index_local.py  index_read_stress.py  index_url_count.py  inspect_index.py  load_test.py  make_curl.py  performance.py  recent_batches.py  record_historical_batches.py  search.py  send_batch.py  stress_test_request.py  tfidf.py  top_links.py  update_urls.py  url_queue.py  wiki_stats.py
app/: api.py  apps.py  asgi.py  settings.py  settings_common.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
config/: tinysearchengine.yaml
config/pipeline/: pipeline_download_cc_index.yaml  pipeline_none.yaml
devdata/: super-search-candidates.json  super-search-shortlist.json
devdata/index-v2.lmdb/: lock.mdb
devdata/index-v2.tinysearch.lmdb/: lock.mdb
devdata/llm_relabel/: pass1_intents.jsonl  pass3_judgments.jsonl  source_catalog.json
devdata/rankeval/: model.pickle  queries-dev.csv  rankings-dev.csv
devdata/rankeval-2024-06/: model.pickle  queries.csv
devdata/rankeval-2026-04/: model.pickle  model.xgb
docs/: development.md
domains/: domain_titles.py  queue_domains.py
front-end/: config.js  package-lock.json  package.json  vite.config.js
front-end/assets/: opensearch.xml
front-end/data-privacy/: index.html
front-end/src/: index.html  index.js
indexer/: crawl.py  extract_local.py  extract_process.py  index.py  index_glob.py  index_queue.py  indexcc.py  wiki.py
indexer/domains/: domain_titles.py  queue_domains.py
justext/: utils.py
mwmbl/: admin.py  api.py  apps.py  asgi.py  auth.py  background.py  batches.py  count_urls.py  crawl.py  database.py  exceptions.py  format.py  historical.py  hn_top_domains_filtered.py  indexdb.py  local.py  main.py  models.py  quota.py  redis_url_queue.py  retrieve.py  retry.py  search_auth.py  search_setup.py  settings.py  settings_bg_prod.py  settings_common.py  settings_crawler.py  settings_dev.py  settings_prod.py  settings_test.py  tokenizer.py  update_pages.py  url_queue.py  urls.py  usernames.py  utils.py  views.py  wsgi.py
mwmbl/crawler/: README.md  app.py  batch.py  domains.py  env_vars.py  historical.py  protobuf_parser.py  retrieve.py  ssrf.py  stats.py  structured_schemas.py  urls.py
mwmbl/evaluation/: api.py  schemas.py  wasm_validator.py
mwmbl/indexer/: batch.py  batch_cache.py  blacklist.py  blacklist_providers.py  crawl.py  dedupe.py  deploy.sh  domains.py  extract.py  extract_local.py  fsqueue.py  historical.py  hn-top-domains-filtered.py  index.py  index_batches.py  index_crawl.py  index_glob.py  index_queue.py  indexcc.py  indexdb.py  links.py  paths.py  preprocess.py  process_batch.py  retrieve.py  update_pages.py  update_urls.py  wiki.py
mwmbl/justext/: core.py  paragraph.py  utils.py
mwmbl/migrations/: 0001_initial.py  0002_curation.py  0003_auto_20231203_0614.py  0004_curation_original_index_results.py  0005_oldindex.py  0006_flagcuration.py  0006_remove_oldindex_index_total_pages_and_more.py  0007_alter_oldindex_last_copied_time_and_more.py  0007_flagcuration_status_alter_flagcuration_reason.py  0008_alter_flagcuration_options_and_more.py  0009_alter_domainsubmission_options.py  0010_apikey.py  0011_alter_domainsubmission_submitted_on_and_more.py  0012_wasmevaluationjob.py  (+15 more)
mwmbl_rank/: Cargo.toml
mwmbl_rank/data/: hn_top_domains_filtered.json
mwmbl_rank/src/: domain.rs  features.rs  idf.rs  lib.rs  pipeline.rs  text.rs  wiki.rs
notes/: super-search-manual-poc-analysis.md  super-search-manual-poc-data.md
resources/: mwmbl-crawl-terms.csv
scripts/: augment_matrix_intent.py  auto_recipe.py  auto_recipe_html.py  build_super_search_candidates.py  check_search_api_key.py  compile_protos.py  download_dataset.py  export_domains_json.py  fetch_url.py  llm_relabel_pass1.py  llm_relabel_pass1_run.py  llm_relabel_pass2_collect.py  llm_relabel_pass3_judge.py  prescreen_sites.py  smoke_recipe.py  super_search_coverage.py  super_search_eval.py  super_search_manual_poc.py  super_search_new_sources_eval.py  verify_user_ids_beta.py
static/: index.css  index.html  index.js  plugin.xml
sveltekit-frontend/: .mise.toml  Dockerfile  README.md  components.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
test/: conftest.py  test_auth.py  test_blacklist.py  test_blacklist_providers.py  test_comma_urls.py  test_completer.py  test_copy_index.py  test_crawl_functional.py  test_evaluation_api.py  test_fallback_model.py  test_format.py  test_index_batches.py  test_indexdb.py  test_indexer.py  test_large_url_list.py  test_ltr_rank.py  test_marketing_consent.py  test_mmr_rank.py  test_openapi.py  test_platform_billing.py  test_rank.py  test_retrieve_extract.py  test_rust_features.py  test_rust_pipeline.py  test_search_api_key.py  test_ssrf.py  test_super_search.py  test_super_search_bandit.py  test_super_search_eval.py  test_super_search_recipes.py  test_super_search_select.py  test_super_search_smoke.py  test_super_search_sources.py  test_super_search_vectors.py  test_update_urls.py  test_url_database.py  test_url_queue.py  test_utils.py  test_voting_api.py
tinysearchengine/: app.py  create_app.py  indexer.py
(+312 files in other folders)
