[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[project]
authors = [
    {name = "Daoud Clarke", email = "daoud.clarke@gmail.com"},
]
requires-python = "<3.11,>=3.10"
dependencies = [
    "pandas<2.0.0,>=1.3.5",
    "scipy<2.0.0,>=1.8.0",
    "scikit-learn<2.0.0,>=1.0.2",
    "zstandard<1.0.0,>=0.16.0",
    "mmh3<4.0.0,>=3.0.0",
    "uvicorn<1.0.0,>=0.16.0",
    "pyyaml==6.0",
    "boto3==1.35.99",
    "requests<3.0.0,>=2.27.1",
    "psycopg2-binary<3.0.0,>=2.9.3",
    "pytest<8.0.0,>=7.2.1",
    "pytest-mock<4.0.0,>=3.10.0",
    "django<5.0.0,>=4.2.4",
    "django-ninja==1.3.0",
    "requests-cache<2.0.0,>=1.1.0",
    "redis[hiredis]<6.0.0,>=5.0.1",
    "django-allauth<1.0.0,>=0.57.0",
    "dj-database-url<3.0.0,>=2.1.0",
    "django-htmx<2.0.0,>=1.17.0",
    "django-vite<3.0.0,>=2.1.3",
    "pybloomfiltermmap3<1.0.0,>=0.5.7",
    "lxml-html-clean<1.0.0,>=0.1.0",
    "lxml<6.0.0,>=5.2.0",
    "numpy==1.23.2",
    "objgraph<4.0.0,>=3.6.1",
    "psutil<7.0.0,>=6.0.0",
    "xgboost<3.0.0,>=2.1.0",
    "pydistinct<1.0.0,>=0.6.4",
    "django-ninja-jwt<6.0.0,>=5.3.3",
    "sentry-sdk<3.0.0,>=2.13.0",
]
name = "mwmbl"
version = "0.1.0"
description = ""

[project.optional-dependencies]
indexer = [
    "ujson==4.3.0",
    "warcio==1.7.4",
    "idna==3.3",
    "beautifulsoup4==4.10.0",
    "langdetect==1.0.9",
    "pyarrow==6.0.0",
    "pyspark==3.2.0",
    "Levenshtein==0.16.0",
]

[project.scripts]
mwmbl-tinysearchengine = "mwmbl.main:run"

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.0.1",
]
