[build-system]
requires = ["maturin>=1.5,<2.0", "patchelf"]
build-backend = "maturin"

# PEP 621 project metadata
[project]
name = "mwmbl"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas>=1.3.5,<2.0.0",
    "scipy>=1.8.0",
    "scikit-learn>=1.0.2",
    "zstandard>=0.16.0",
    "mmh3>=3.0.0",
    "uvicorn>=0.16.0",
    "pyyaml==6.0",
    "boto3==1.35.99",
    "requests>=2.27.1",
    "psycopg2-binary>=2.9.3",
    "django>=4.2.4",
    "django-ninja==1.3.0",
    "requests-cache>=1.1.0",
    "redis[hiredis]>=5.0.1",
    "django-allauth==0.57.2",
    "dj-database-url>=2.1.0",
    "django-htmx>=1.17.0",
    "django-vite>=2.1.3",
    "pybloomfiltermmap3>=0.6.0",
    "lxml-html-clean>=0.1.0",
    "lxml>=5.2.0",
    "numpy==1.23.2",
    "objgraph>=3.6.1",
    "psutil>=6.0.0",
    "xgboost>=2.1.0",
    "pydistinct>=0.6.4",
    "django-ninja-jwt>=5.3.3",
    "sentry-sdk>=2.13.0",
    "django-debug-toolbar>=5.2.0",
    "wasmtime>=24.0.0",
    "dotenv>=0.9.9",
    "py-spy>=0.4.1",
    "scalar-ninja>=0.3.0",
    "django-background-tasks>=1.2.8",
    "django-redis>=5.4.0",
    "polar-sdk>=0.10.0",
]

[project.optional-dependencies]
indexer = [
    "ujson==4.3.0",
    "warcio==1.7.4",
    "idna==3.3",
    "beautifulsoup4==4.10.0",
    "langdetect==1.0.9",
    "pyarrow==6.0.0",
    "pyspark==3.2.0",
    "Levenshtein==0.16.0",
]

[project.scripts]
mwmbl-tinysearchengine = "mwmbl.main:run"
mwmbl-crawl = "mwmbl.crawl:run"

[dependency-groups]
dev = [
    "pytest>=7.0.1",
    "pytest-mock>=3.10.0",
    "pytest-django>=4.5.2",
    "fakeredis>=2.30.1",
    "maturin>=1.5,<2.0",
    "patchelf>=0.17.2.4",
]

[tool.maturin]
python-source = "."
module-name = "mwmbl_rank"
manifest-path = "mwmbl_rank/Cargo.toml"
# Include the mwmbl Python package and the generated domains JSON
python-packages = ["mwmbl"]
include = ["mwmbl_rank/data/hn_top_domains_filtered.json"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
DJANGO_SETTINGS_MODULE = "mwmbl.settings_test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db"
