[package]
name = "mwmbl_rank"
version = "0.1.0"
edition = "2021"

[lib]
name = "mwmbl_rank"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
xgb = { version = "3.0.5", features = ["use_prebuilt_xgb"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
url = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Debug alternative options
# debug = true
# opt-level = 1
# lto = false
# codegen-units = 1
# panic = "abort" # Simplifies the call stack by removing unwinding logic

